fixed desktop nav bar alignment

--- a/app/assets/stylesheets/_back_button.scss
+++ b/app/assets/stylesheets/_back_button.scss
@@ -1,6 +1,5 @@
 #back-button {
     p {
-        display: inline;
         color: rgb(255, 255, 255);
         font-family: 'Open Sans', sans-serif;
         font-weight: 600;
@@ -9,10 +8,12 @@
         padding: 1vh 2vw;
         border-radius: 0.25em;
         text-align: center;
-
+        width: 3em;
+        margin-left: 7.5%;
     }   
     .link-to {
         text-decoration: none;
         color: rgb(255, 255, 255);
+        text-shadow: grey 1px 1px;
     }
 }
