--- a/app/assets/stylesheets/contents_index.scss
+++ b/app/assets/stylesheets/contents_index.scss
@@ -3,6 +3,11 @@
 #results {
     background-color: #4DCCBD;
 
+    .heading {
+        text-align: center;
+        color: white;
+    }
+
     // sub catagory nav bar
     .category-search {
         background-color: #FF8484;
